# machine_learning_demos

./: .gitignore  README.md  keras-multi-object-detection.py  requirements.txt  requirements_tensorflow.txt  requirements_yolo5.txt  setup.cfg  setup.py
demos/modules/: models.py
demos/pipelines/: base_pipeline.py  bbox_detection.py  classification.py  object_detection.py
machine_learning_demos/modules/: models.py
machine_learning_demos/pipelines/: classification.py
scripts/: keras-multi-object-detection.py
