[metadata]
name = demos
version = 0.1.0
author=David Ashton
url=https://github.com/ashtondavi/machine_learning_demos
description=Python package of several machine learning demos
long_description=open('README.md').read(),


[options]
packages = find:

install_requires =
    pandas == 1.4.1
    yolov5 >= 0.0.1